--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ anyhow = "1.0.75"
 chrono = "0.4.31"
 state = "0.6.0"
 thiserror = "1.0.50"
+tokio = {version = "1.34.0", features = ["full"]} 
 windows = {version = "0.51.1", features = ["Win32_Foundation", "Win32_System_Com", "Win32_NetworkManagement", "Win32_NetworkManagement_WiFi"]}
